--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "sweetalert2": "^11.3.10",
     "uuid": "^8.3.2",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-notifications": "^1.0.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toasted": "^1.1.28",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
